JAR cmd wont receive VM options